# Sudoku_OCaml

./: .ocamlformat  Makefile  README.md  Sudoku_OCaml.opam  dune-project
docs/: board_generate_example.md  game.md
lib/: board.ml  board.mli  board_generate.ml  board_mutation.ml  board_rules.ml  board_validation.ml  configure_ui.ml  dune  game_logic.ml  game_move.ml  game_state.ml  generate_board.ml  generate_board.mli  hints.ml  hints.mli  invalid_cells.ml  mutation_board.ml  rules_board.ml  solve.ml  solve.mli  ui.ml  ui.mli  ui_board.ml  ui_config.ml  ui_debug.ml  ui_events.ml  ui_game_completion.ml  ui_hints.ml  ui_main.ml  ui_menu.ml  ui_state.ml  validation_board.ml  validation_move.ml
test/: dune  test_Soduku_OCaml.ml  test_Sudoku.ml  test_Sudoku_OCaml.ml
